codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• 已等待后台终端 · just fix

↳ 已与后台终端交互 · just fix
  └ ls
