codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
↳ 已与后台终端交互 · just fix
  └ pwd

• 已等待后台终端 · just fix

  [completion time]
